lendinvest dev/force-app/main/default/objects/Account/fields/ceo_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ceo_Mobile__c</fullName>
    <formula>$Organization.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ceo Mobile</label>
    <type>Text</type>
</CustomField>