lendinvest dev/force-app/main/default/objects/Account/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <description>classifies the customer depending on total amount spent</description>
    <inlineHelpText>classifies the customer as follows: 
 ● GOLD = Total Customer Spend of £50,000 and above,
 ● SILVER = Total Customer Spend of £25,000 and above,
 ● BRONZE = Total Customer Spend of £10,000 and above, 
 ● &lt;blank&gt;= Total Customer Spend is less than £10,000, leave the field blank.</inlineHelpText>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>SILVER</fullName>
            </value>
            <value>
                <fullName>GOLD</fullName>
            </value>
            <value>
                <fullName>&apos;&apos;</fullName>
                <default>true</default>
                <label>&apos;&apos;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>