lendinvest dev/force-app/main/default/objects/Account/fields/First_Time_Gold_Classification__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Gold_Classification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>flag to know if it s the first time that the account reach the gold classification</description>
    <inlineHelpText>flag to know if it s the first time that the account reach the gold classification</inlineHelpText>
    <label>First Time Gold Classification</label>
    <type>Checkbox</type>
</CustomField>